--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
+  <button class="toggle-btn" onclick="toggleSidebar()"><ion-icon name="ellipsis-vertical-outline"></ion-icon></button>
   <div class="container">
     <img src="tut.png">
   </div>
@@ -143,3 +144,15 @@
         <td></td>
         <td></td>
         <td></td>
+    
+    <script>
+      function toggleSidebar() {
+    var sidebar = document.querySelector('.sidebar');
+    sidebar.classList.toggle('open');
+      }
+    </script>
+    
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  </body>
+  </html>
